--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.env
 # Dependencies
 /node_modules
 
@@ -18,3 +19,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+#Python
+/myenv
+Development_Weekly_Updates_*
