--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,49 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Environment variables
 .env
+*.env
+test.env
+
+# Virtual Environment
+venv/
+ENV/
+env/
+myenv/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Test artifacts
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
 # Dependencies
 /node_modules
 
@@ -21,8 +66,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
 #Python
-/myenv
 Development_Weekly_Updates_*
-Development_Sprint_Updates_*
+Development_Sprint_*
