--- a/utils/postman-to-md/package.json
+++ b/utils/postman-to-md/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "npx ts-node index.ts -i defactor-pools-api.postman_collection.json -o ../../docs/pools/back-end/api/erc20CollateralToken/ --ignore \"COUNTER PARTY POOL\""
+    "start": "npx ts-node index.ts -i defactor-engage-api.postman_collection.json -o ../../docs/pools/back-end/api/engage"
   },
   "dependencies": {
     "@types/node": "^20.12.2",
