--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "memfs": "^4.0.0",
     "acorn": "^8.10.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-helmet-async": "^2.0.5"
   },
   "browserslist": {
     "production": [
